prepocess/uv-preprocessed.h

typedef long unsigned int size_t;
typedef long int __ssize_t;
typedef __ssize_t ssize_t;
typedef __int32_t int32_t;
typedef __int64_t int64_t;
typedef __uint16_t uint16_t;
typedef __uint64_t uint64_t;
typedef __gid_t gid_t;
typedef __uid_t uid_t;
typedef __clockid_t clockid_t;
struct timespec {

  __time_t tv_sec;

  __syscall_slong_t tv_nsec;
# 31 "/usr/include/bits/types/struct_timespec.h" 3 4
};
typedef unsigned long int pthread_t;
typedef unsigned int pthread_key_t;
typedef int pthread_once_t;
typedef union {
  struct __pthread_mutex_s __data;
  char __size[40];
  long int __align;
} pthread_mutex_t;
typedef union {
  struct __pthread_cond_s __data;
  char __size[48];
  __extension__ long long int __align;
} pthread_cond_t;
typedef union {
  struct __pthread_rwlock_arch_t __data;
  char __size[56];
  long int __align;
} pthread_rwlock_t;
typedef union {
  char __size[32];
  long int __align;
} pthread_barrier_t;
typedef __socklen_t socklen_t;
extern int inet_pton(int __af, const char *__restrict __cp,
                     void *__restrict __buf)
    __attribute__((__nothrow__, __leaf__));
extern const char *inet_ntop(int __af, const void *__restrict __cp,
                             char *__restrict __buf, socklen_t __len)
    __attribute__((__nothrow__, __leaf__));
typedef union {
  char __size[32];
  long int __align;
} sem_t;
extern int sem_init(sem_t *__sem, int __pshared, unsigned int __value)
    __attribute__((__nothrow__, __leaf__)) __attribute__((__nonnull__(1)));
extern int sem_destroy(sem_t *__sem) __attribute__((__nothrow__, __leaf__))
__attribute__((__nonnull__(1)));
extern int sem_wait(sem_t *__sem) __attribute__((__nonnull__(1)));
extern int sem_trywait(sem_t *__sem) __attribute__((__nothrow__))
__attribute__((__nonnull__(1)));
extern int sem_post(sem_t *__sem) __attribute__((__nothrow__))
__attribute__((__nonnull__(1)));
extern int clock_gettime(clockid_t __clock_id, struct timespec *__tp)
    __attribute__((__nothrow__, __leaf__)) __attribute__((__nonnull__(2)));
typedef struct {
  struct __cancel_jmp_buf_tag __cancel_jmp_buf[1];
  void *__pad[4];
} __pthread_unwind_buf_t __attribute__((__aligned__));
struct uv_loop_s;
typedef int uv_file;
typedef pthread_once_t uv_once_t;
typedef pthread_t uv_thread_t;
typedef pthread_mutex_t uv_mutex_t;
typedef pthread_rwlock_t uv_rwlock_t;
typedef sem_t uv_sem_t;
typedef pthread_cond_t uv_cond_t;
typedef pthread_key_t uv_key_t;
typedef pthread_barrier_t uv_barrier_t;
typedef gid_t uv_gid_t;
typedef uid_t uv_uid_t;
typedef struct {
  void *handle;
  char *errmsg;
} uv_lib_t;
typedef struct uv_loop_s uv_loop_t;
typedef struct uv_fs_event_s uv_fs_event_t;
typedef struct uv_fs_poll_s uv_fs_poll_t;
typedef struct uv_signal_s uv_signal_t;
typedef struct uv_fs_s uv_fs_t;
typedef struct uv_random_s uv_random_t;
typedef void (*uv_fs_cb)(uv_fs_t *req);
typedef void (*uv_random_cb)(uv_random_t *req, int status, void *buf,
                             size_t buflen);
typedef enum { UV_CLOCK_MONOTONIC, UV_CLOCK_REALTIME } uv_clock_id;
typedef struct {
  int64_t tv_sec;
  int32_t tv_nsec;
} uv_timespec64_t;
typedef struct {
  int64_t tv_sec;
  int32_t tv_usec;
} uv_timeval64_t;
typedef struct {
  uint64_t st_dev;
  uint64_t st_mode;
  uint64_t st_nlink;
  uint64_t st_uid;
  uint64_t st_gid;
  uint64_t st_rdev;
  uint64_t st_ino;
  uint64_t st_size;
  uint64_t st_blksize;
  uint64_t st_blocks;
  uint64_t st_flags;
  uint64_t st_gen;
  uv_timespec_t st_atim;
  uv_timespec_t st_mtim;
  uv_timespec_t st_ctim;
  uv_timespec_t st_birthtim;
} uv_stat_t;
typedef void (*uv_fs_event_cb)(uv_fs_event_t *handle, const char *filename,
                               int events, int status);
typedef void (*uv_fs_poll_cb)(uv_fs_poll_t *handle, int status,
                              const uv_stat_t *prev, const uv_stat_t *curr);
typedef void (*uv_signal_cb)(uv_signal_t *handle, int signum);
struct uv_fs_s {
  void *data;
  uv_req_type type;
  void *reserved[6];
  uv_fs_type fs_type;
  uv_loop_t *loop;
  uv_fs_cb cb;
  ssize_t result;
  void *ptr;
  const char *path;
  uv_stat_t statbuf;
  const char *new_path;
  uv_file file;
  int flags;
  mode_t mode;
  unsigned int nbufs;
  uv_buf_t *bufs;
  off_t off;
  uv_uid_t uid;
  uv_gid_t gid;
  double atime;
  double mtime;
  struct uv__work work_req;
  uv_buf_t bufsml[4];
};
__attribute__((visibility("default"))) int
uv_fs_chown(uv_loop_t *loop, uv_fs_t *req, const char *path, uv_uid_t uid,
            uv_gid_t gid, uv_fs_cb cb);
__attribute__((visibility("default"))) int
uv_fs_fchown(uv_loop_t *loop, uv_fs_t *req, uv_file file, uv_uid_t uid,
             uv_gid_t gid, uv_fs_cb cb);
__attribute__((visibility("default"))) int
uv_fs_lchown(uv_loop_t *loop, uv_fs_t *req, const char *path, uv_uid_t uid,
             uv_gid_t gid, uv_fs_cb cb);
__attribute__((visibility("default"))) int
uv_fs_statfs(uv_loop_t *loop, uv_fs_t *req, const char *path, uv_fs_cb cb);
struct uv_fs_event_s {
  void *data;
  uv_loop_t *loop;
  uv_handle_type type;
  uv_close_cb close_cb;
  struct uv__queue handle_queue;
  union {
    int fd;
    void *reserved[4];
  } u;
  uv_handle_t *next_closing;
  unsigned int flags;

  char *path;
  uv_fs_event_cb cb;
# 1673 "/usr/include/uv.h" 3 4
  struct uv__queue watchers;
  int wd;

# 1674 "/usr/include/uv.h"
};
struct uv_fs_poll_s {
  void *data;
  uv_loop_t *loop;
  uv_handle_type type;
  uv_close_cb close_cb;
  struct uv__queue handle_queue;
  union {
    int fd;
    void *reserved[4];
  } u;
  uv_handle_t *next_closing;
  unsigned int flags;

  void *poll_ctx;
};
__attribute__((visibility("default"))) int
uv_fs_poll_init(uv_loop_t *loop, uv_fs_poll_t *handle);
__attribute__((visibility("default"))) int
uv_fs_poll_start(uv_fs_poll_t *handle, uv_fs_poll_cb poll_cb, const char *path,
                 unsigned int interval);
__attribute__((visibility("default"))) int
uv_fs_poll_stop(uv_fs_poll_t *handle);
__attribute__((visibility("default"))) int
uv_fs_poll_getpath(uv_fs_poll_t *handle, char *buffer, size_t *size);
struct uv_signal_s {
  void *data;
  uv_loop_t *loop;
  uv_handle_type type;
  uv_close_cb close_cb;
  struct uv__queue handle_queue;
  union {
    int fd;
    void *reserved[4];
  } u;
  uv_handle_t *next_closing;
  unsigned int flags;
  uv_signal_cb signal_cb;
  int signum;
  struct {
    struct uv_signal_s *rbe_left;
    struct uv_signal_s *rbe_right;
    struct uv_signal_s *rbe_parent;
    int rbe_color;
  } tree_entry;
  unsigned int caught_signals;
  unsigned int dispatched_signals;
};
__attribute__((visibility("default"))) int uv_signal_init(uv_loop_t *loop,
                                                          uv_signal_t *handle);
__attribute__((visibility("default"))) int
uv_signal_start(uv_signal_t *handle, uv_signal_cb signal_cb, int signum);
__attribute__((visibility("default"))) int
uv_signal_start_oneshot(uv_signal_t *handle, uv_signal_cb signal_cb,
                        int signum);
__attribute__((visibility("default"))) int uv_signal_stop(uv_signal_t *handle);
__attribute__((visibility("default"))) void uv_loadavg(double avg[3]);
__attribute__((visibility("default"))) int
uv_fs_event_init(uv_loop_t *loop, uv_fs_event_t *handle);
__attribute__((visibility("default"))) int
uv_fs_event_start(uv_fs_event_t *handle, uv_fs_event_cb cb, const char *path,
                  unsigned int flags);
__attribute__((visibility("default"))) int
uv_fs_event_stop(uv_fs_event_t *handle);
__attribute__((visibility("default"))) int
uv_fs_event_getpath(uv_fs_event_t *handle, char *buffer, size_t *size);
__attribute__((visibility("default"))) int
uv_ip4_addr(const char *ip, int port, struct sockaddr_in *addr);
__attribute__((visibility("default"))) int
uv_ip6_addr(const char *ip, int port, struct sockaddr_in6 *addr);
__attribute__((visibility("default"))) int
uv_ip4_name(const struct sockaddr_in *src, char *dst, size_t size);
__attribute__((visibility("default"))) int
uv_ip6_name(const struct sockaddr_in6 *src, char *dst, size_t size);
__attribute__((visibility("default"))) int
uv_ip_name(const struct sockaddr *src, char *dst, size_t size);
__attribute__((visibility("default"))) int uv_inet_ntop(int af, const void *src,
                                                        char *dst, size_t size);
__attribute__((visibility("default"))) int uv_inet_pton(int af, const char *src,
                                                        void *dst);
struct uv_random_s {
  void *data;
  uv_req_type type;
  void *reserved[6];

  uv_loop_t *loop;

  int status;
  void *buf;
  size_t buflen;
  uv_random_cb cb;
  struct uv__work work_req;
};
__attribute__((visibility("default"))) int
uv_random(uv_loop_t *loop, uv_random_t *req, void *buf, size_t buflen,
          unsigned flags, uv_random_cb cb);
__attribute__((visibility("default"))) int
uv_if_indextoname(unsigned int ifindex, char *buffer, size_t *size);
__attribute__((visibility("default"))) int
uv_if_indextoiid(unsigned int ifindex, char *buffer, size_t *size);
__attribute__((visibility("default"))) int uv_exepath(char *buffer,
                                                      size_t *size);
__attribute__((visibility("default"))) int uv_cwd(char *buffer, size_t *size);
__attribute__((visibility("default"))) int uv_chdir(const char *dir);
__attribute__((visibility("default"))) uint64_t uv_get_free_memory(void);
__attribute__((visibility("default"))) uint64_t uv_get_total_memory(void);
__attribute__((visibility("default"))) uint64_t uv_get_constrained_memory(void);
__attribute__((visibility("default"))) uint64_t uv_get_available_memory(void);
__attribute__((visibility("default"))) int
uv_clock_gettime(uv_clock_id clock_id, uv_timespec64_t *ts);
__attribute__((visibility("default"))) uint64_t uv_hrtime(void);
__attribute__((visibility("default"))) void uv_sleep(unsigned int msec);
__attribute__((visibility("default"))) void uv_disable_stdio_inheritance(void);
__attribute__((visibility("default"))) int uv_dlopen(const char *filename,
                                                     uv_lib_t *lib);
__attribute__((visibility("default"))) void uv_dlclose(uv_lib_t *lib);
__attribute__((visibility("default"))) int
uv_dlsym(uv_lib_t *lib, const char *name, void **ptr);
__attribute__((visibility("default"))) const char *
uv_dlerror(const uv_lib_t *lib);
__attribute__((visibility("default"))) int uv_mutex_init(uv_mutex_t *handle);
__attribute__((visibility("default"))) int
uv_mutex_init_recursive(uv_mutex_t *handle);
__attribute__((visibility("default"))) void
uv_mutex_destroy(uv_mutex_t *handle);
__attribute__((visibility("default"))) void uv_mutex_lock(uv_mutex_t *handle);
__attribute__((visibility("default"))) int uv_mutex_trylock(uv_mutex_t *handle);
__attribute__((visibility("default"))) void uv_mutex_unlock(uv_mutex_t *handle);
__attribute__((visibility("default"))) int uv_rwlock_init(uv_rwlock_t *rwlock);
__attribute__((visibility("default"))) void
uv_rwlock_destroy(uv_rwlock_t *rwlock);
__attribute__((visibility("default"))) void
uv_rwlock_rdlock(uv_rwlock_t *rwlock);
__attribute__((visibility("default"))) int
uv_rwlock_tryrdlock(uv_rwlock_t *rwlock);
__attribute__((visibility("default"))) void
uv_rwlock_rdunlock(uv_rwlock_t *rwlock);
__attribute__((visibility("default"))) void
uv_rwlock_wrlock(uv_rwlock_t *rwlock);
__attribute__((visibility("default"))) int
uv_rwlock_trywrlock(uv_rwlock_t *rwlock);
__attribute__((visibility("default"))) void
uv_rwlock_wrunlock(uv_rwlock_t *rwlock);
__attribute__((visibility("default"))) int uv_sem_init(uv_sem_t *sem,
                                                       unsigned int value);
__attribute__((visibility("default"))) void uv_sem_destroy(uv_sem_t *sem);
__attribute__((visibility("default"))) void uv_sem_post(uv_sem_t *sem);
__attribute__((visibility("default"))) void uv_sem_wait(uv_sem_t *sem);
__attribute__((visibility("default"))) int uv_sem_trywait(uv_sem_t *sem);
__attribute__((visibility("default"))) int uv_cond_init(uv_cond_t *cond);
__attribute__((visibility("default"))) void uv_cond_destroy(uv_cond_t *cond);
__attribute__((visibility("default"))) void uv_cond_signal(uv_cond_t *cond);
__attribute__((visibility("default"))) void uv_cond_broadcast(uv_cond_t *cond);
__attribute__((visibility("default"))) int
uv_barrier_init(uv_barrier_t *barrier, unsigned int count);
__attribute__((visibility("default"))) void
uv_barrier_destroy(uv_barrier_t *barrier);
__attribute__((visibility("default"))) int
uv_barrier_wait(uv_barrier_t *barrier);
__attribute__((visibility("default"))) void uv_cond_wait(uv_cond_t *cond,
                                                         uv_mutex_t *mutex);
__attribute__((visibility("default"))) int
uv_cond_timedwait(uv_cond_t *cond, uv_mutex_t *mutex, uint64_t timeout);
__attribute__((visibility("default"))) void uv_once(uv_once_t *guard,
                                                    void (*callback)(void));
__attribute__((visibility("default"))) int uv_key_create(uv_key_t *key);
__attribute__((visibility("default"))) void uv_key_delete(uv_key_t *key);
__attribute__((visibility("default"))) void *uv_key_get(uv_key_t *key);
__attribute__((visibility("default"))) void uv_key_set(uv_key_t *key,
                                                       void *value);
__attribute__((visibility("default"))) int uv_gettimeofday(uv_timeval64_t *tv);
typedef void (*uv_thread_cb)(void *arg);
__attribute__((visibility("default"))) int
uv_thread_create(uv_thread_t *tid, uv_thread_cb entry, void *arg);
struct uv_thread_options_s {
  unsigned int flags;
  size_t stack_size;
};
typedef struct uv_thread_options_s uv_thread_options_t;
__attribute__((visibility("default"))) int
uv_thread_create_ex(uv_thread_t *tid, const uv_thread_options_t *params,
                    uv_thread_cb entry, void *arg);
__attribute__((visibility("default"))) int
uv_thread_setaffinity(uv_thread_t *tid, char *cpumask, char *oldmask,
                      size_t mask_size);
__attribute__((visibility("default"))) int
uv_thread_getaffinity(uv_thread_t *tid, char *cpumask, size_t mask_size);
__attribute__((visibility("default"))) int uv_thread_getcpu(void);
__attribute__((visibility("default"))) uv_thread_t uv_thread_self(void);
__attribute__((visibility("default"))) int uv_thread_join(uv_thread_t *tid);
__attribute__((visibility("default"))) int
uv_thread_equal(const uv_thread_t *t1, const uv_thread_t *t2);
struct uv_loop_s {

  void *data;

  unsigned int active_handles;
  struct uv__queue handle_queue;
  union {
    void *unused;
    unsigned int count;
  } active_reqs;

  void *internal_fields;

  unsigned int stop_flag;
  unsigned long flags;
  int backend_fd;
  struct uv__queue pending_queue;
  struct uv__queue watcher_queue;
  uv__io_t **watchers;
  unsigned int nwatchers;
  unsigned int nfds;
  struct uv__queue wq;
  uv_mutex_t wq_mutex;
  uv_async_t wq_async;
  uv_rwlock_t cloexec_lock;
  uv_handle_t *closing_handles;
  struct uv__queue process_handles;
  struct uv__queue prepare_handles;
  struct uv__queue check_handles;
  struct uv__queue idle_handles;
  struct uv__queue async_handles;
  void (*async_unused)(void);
  uv__io_t async_io_watcher;
  int async_wfd;
  struct {
    void *min;
    unsigned int nelts;
  } timer_heap;
  uint64_t timer_counter;
  uint64_t time;
  int signal_pipefd[2];
  uv__io_t signal_io_watcher;
  uv_signal_t child_watcher;
  int emfile_fd;
# 1928 "/usr/include/uv.h" 3 4
  uv__io_t inotify_read_watcher;
  void *inotify_watchers;
  int inotify_fd;

# 1929 "/usr/include/uv.h"
};
__attribute__((visibility("default"))) void *
uv_loop_get_data(const uv_loop_t *);
__attribute__((visibility("default"))) void uv_loop_set_data(uv_loop_t *,
                                                             void *data);
__attribute__((visibility("default"))) size_t
uv_utf16_length_as_wtf8(const uint16_t *utf16, ssize_t utf16_len);
__attribute__((visibility("default"))) int
uv_utf16_to_wtf8(const uint16_t *utf16, ssize_t utf16_len, char **wtf8_ptr,
                 size_t *wtf8_len_ptr);
__attribute__((visibility("default"))) ssize_t
uv_wtf8_length_as_utf16(const char *wtf8);
__attribute__((visibility("default"))) void
uv_wtf8_to_utf16(const char *wtf8, uint16_t *utf16, size_t utf16_len);