prepocess/uv-preprocessed/uv.odin


	@(link_name = "uv_fs_chown")
	fs_chown :: proc(loop: ^uv_loop_t, req: ^uv_fs_t, path: cstring, uid: uv_uid_t, gid: uv_gid_t, cb: uv_fs_cb) -> i32 ---

	@(link_name = "uv_fs_fchown")
	fs_fchown :: proc(loop: ^uv_loop_t, req: ^uv_fs_t, file: uv_file, uid: uv_uid_t, gid: uv_gid_t, cb: uv_fs_cb) -> i32 ---

	@(link_name = "uv_fs_lchown")
	fs_lchown :: proc(loop: ^uv_loop_t, req: ^uv_fs_t, path: cstring, uid: uv_uid_t, gid: uv_gid_t, cb: uv_fs_cb) -> i32 ---

	@(link_name = "uv_fs_statfs")
	fs_statfs :: proc(loop: ^uv_loop_t, req: ^uv_fs_t, path: cstring, cb: uv_fs_cb) -> i32 ---

	@(link_name = "uv_fs_poll_init")
	fs_poll_init :: proc(loop: ^uv_loop_t, handle: ^uv_fs_poll_t) -> i32 ---

	@(link_name = "uv_fs_poll_start")
	fs_poll_start :: proc(handle: ^uv_fs_poll_t, poll_cb: uv_fs_poll_cb, path: cstring, interval: u32) -> i32 ---

	@(link_name = "uv_fs_poll_stop")
	fs_poll_stop :: proc(handle: ^uv_fs_poll_t) -> i32 ---

	@(link_name = "uv_fs_poll_getpath")
	fs_poll_getpath :: proc(handle: ^uv_fs_poll_t, buffer: cstring, size: ^u64) -> i32 ---

	@(link_name = "uv_signal_init")
	signal_init :: proc(loop: ^uv_loop_t, handle: ^uv_signal_t) -> i32 ---

	@(link_name = "uv_signal_start")
	signal_start :: proc(handle: ^uv_signal_t, signal_cb: uv_signal_cb, signum: i32) -> i32 ---

	@(link_name = "uv_signal_start_oneshot")
	signal_start_oneshot :: proc(handle: ^uv_signal_t, signal_cb: uv_signal_cb, signum: i32) -> i32 ---

	@(link_name = "uv_signal_stop")
	signal_stop :: proc(handle: ^uv_signal_t) -> i32 ---

	@(link_name = "uv_loadavg")
	loadavg :: proc(avg: [3]f64) ---

	@(link_name = "uv_fs_event_init")
	fs_event_init :: proc(loop: ^uv_loop_t, handle: ^uv_fs_event_t) -> i32 ---

	@(link_name = "uv_fs_event_start")
	fs_event_start :: proc(handle: ^uv_fs_event_t, cb: uv_fs_event_cb, path: cstring, flags: u32) -> i32 ---

	@(link_name = "uv_fs_event_stop")
	fs_event_stop :: proc(handle: ^uv_fs_event_t) -> i32 ---

	@(link_name = "uv_fs_event_getpath")
	fs_event_getpath :: proc(handle: ^uv_fs_event_t, buffer: cstring, size: ^u64) -> i32 ---

	@(link_name = "uv_ip4_addr")
	ip4_addr :: proc(ip: cstring, port: i32, addr: rawptr) -> i32 ---

	@(link_name = "uv_ip6_addr")
	ip6_addr :: proc(ip: cstring, port: i32, addr: rawptr) -> i32 ---

	@(link_name = "uv_ip4_name")
	ip4_name :: proc(src: rawptr, dst: cstring, size: u64) -> i32 ---

	@(link_name = "uv_ip6_name")
	ip6_name :: proc(src: rawptr, dst: cstring, size: u64) -> i32 ---

	@(link_name = "uv_ip_name")
	ip_name :: proc(src: rawptr, dst: cstring, size: u64) -> i32 ---

	@(link_name = "uv_inet_ntop")
	inet_ntop :: proc(af: i32, src: rawptr, dst: cstring, size: u64) -> i32 ---

	@(link_name = "uv_inet_pton")
	inet_pton :: proc(af: i32, src: cstring, dst: rawptr) -> i32 ---

	@(link_name = "uv_random")
	random :: proc(loop: ^uv_loop_t, req: ^uv_random_t, buf: rawptr, buflen: u64, flags: u32, cb: uv_random_cb) -> i32 ---

	@(link_name = "uv_if_indextoname")
	if_indextoname :: proc(ifindex: u32, buffer: cstring, size: ^u64) -> i32 ---

	@(link_name = "uv_if_indextoiid")
	if_indextoiid :: proc(ifindex: u32, buffer: cstring, size: ^u64) -> i32 ---

	@(link_name = "uv_exepath")
	exepath :: proc(buffer: cstring, size: ^u64) -> i32 ---

	@(link_name = "uv_cwd")
	cwd :: proc(buffer: cstring, size: ^u64) -> i32 ---

	@(link_name = "uv_chdir")
	chdir :: proc(dir: cstring) -> i32 ---

	@(link_name = "uv_get_free_memory")
	get_free_memory :: proc() -> u64 ---

	@(link_name = "uv_get_total_memory")
	get_total_memory :: proc() -> u64 ---

	@(link_name = "uv_get_constrained_memory")
	get_constrained_memory :: proc() -> u64 ---

	@(link_name = "uv_get_available_memory")
	get_available_memory :: proc() -> u64 ---

	@(link_name = "uv_clock_gettime")
	clock_gettime :: proc(clock_id: uv_clock_id, ts: [^]uv_timespec64_t) -> i32 ---

	@(link_name = "uv_hrtime")
	hrtime :: proc() -> u64 ---

	@(link_name = "uv_sleep")
	sleep :: proc(msec: u32) ---

	@(link_name = "uv_disable_stdio_inheritance")
	disable_stdio_inheritance :: proc() ---

	@(link_name = "uv_dlopen")
	dlopen :: proc(filename: cstring, lib: ^uv_lib_t) -> i32 ---

	@(link_name = "uv_dlclose")
	dlclose :: proc(lib: ^uv_lib_t) ---

	@(link_name = "uv_dlsym")
	dlsym :: proc(lib: ^uv_lib_t, name: cstring, ptr: ^rawptr) -> i32 ---

	@(link_name = "uv_dlerror")
	dlerror :: proc(lib: ^uv_lib_t) -> cstring ---

	@(link_name = "uv_mutex_init")
	mutex_init :: proc(handle: ^uv_mutex_t) -> i32 ---

	@(link_name = "uv_mutex_init_recursive")
	mutex_init_recursive :: proc(handle: ^uv_mutex_t) -> i32 ---

	@(link_name = "uv_mutex_destroy")
	mutex_destroy :: proc(handle: ^uv_mutex_t) ---

	@(link_name = "uv_mutex_lock")
	mutex_lock :: proc(handle: ^uv_mutex_t) ---

	@(link_name = "uv_mutex_trylock")
	mutex_trylock :: proc(handle: ^uv_mutex_t) -> i32 ---

	@(link_name = "uv_mutex_unlock")
	mutex_unlock :: proc(handle: ^uv_mutex_t) ---

	@(link_name = "uv_rwlock_init")
	rwlock_init :: proc(rwlock: ^uv_rwlock_t) -> i32 ---

	@(link_name = "uv_rwlock_destroy")
	rwlock_destroy :: proc(rwlock: ^uv_rwlock_t) ---

	@(link_name = "uv_rwlock_rdlock")
	rwlock_rdlock :: proc(rwlock: ^uv_rwlock_t) ---

	@(link_name = "uv_rwlock_tryrdlock")
	rwlock_tryrdlock :: proc(rwlock: ^uv_rwlock_t) -> i32 ---

	@(link_name = "uv_rwlock_rdunlock")
	rwlock_rdunlock :: proc(rwlock: ^uv_rwlock_t) ---

	@(link_name = "uv_rwlock_wrlock")
	rwlock_wrlock :: proc(rwlock: ^uv_rwlock_t) ---

	@(link_name = "uv_rwlock_trywrlock")
	rwlock_trywrlock :: proc(rwlock: ^uv_rwlock_t) -> i32 ---

	@(link_name = "uv_rwlock_wrunlock")
	rwlock_wrunlock :: proc(rwlock: ^uv_rwlock_t) ---

	@(link_name = "uv_sem_init")
	sem_init :: proc(sem: ^uv_sem_t, value: u32) -> i32 ---

	@(link_name = "uv_sem_destroy")
	sem_destroy :: proc(sem: ^uv_sem_t) ---

	@(link_name = "uv_sem_post")
	sem_post :: proc(sem: ^uv_sem_t) ---

	@(link_name = "uv_sem_wait")
	sem_wait :: proc(sem: ^uv_sem_t) ---

	@(link_name = "uv_sem_trywait")
	sem_trywait :: proc(sem: ^uv_sem_t) -> i32 ---

	@(link_name = "uv_cond_init")
	cond_init :: proc(cond: ^uv_cond_t) -> i32 ---

	@(link_name = "uv_cond_destroy")
	cond_destroy :: proc(cond: ^uv_cond_t) ---

	@(link_name = "uv_cond_signal")
	cond_signal :: proc(cond: ^uv_cond_t) ---

	@(link_name = "uv_cond_broadcast")
	cond_broadcast :: proc(cond: ^uv_cond_t) ---

	@(link_name = "uv_barrier_init")
	barrier_init :: proc(barrier: ^uv_barrier_t, count: u32) -> i32 ---

	@(link_name = "uv_barrier_destroy")
	barrier_destroy :: proc(barrier: ^uv_barrier_t) ---

	@(link_name = "uv_barrier_wait")
	barrier_wait :: proc(barrier: ^uv_barrier_t) -> i32 ---

	@(link_name = "uv_cond_wait")
	cond_wait :: proc(cond: ^uv_cond_t, mutex: ^uv_mutex_t) ---

	@(link_name = "uv_cond_timedwait")
	cond_timedwait :: proc(cond: ^uv_cond_t, mutex: ^uv_mutex_t, timeout: u64) -> i32 ---

	@(link_name = "uv_once")
	once :: proc(guard: ^uv_once_t, callback: callback_func_ptr_anon_52) ---

	@(link_name = "uv_key_create")
	key_create :: proc(key: ^uv_key_t) -> i32 ---

	@(link_name = "uv_key_delete")
	key_delete :: proc(key: ^uv_key_t) ---

	@(link_name = "uv_key_get")
	key_get :: proc(key: ^uv_key_t) -> rawptr ---

	@(link_name = "uv_key_set")
	key_set :: proc(key: ^uv_key_t, value: rawptr) ---

	@(link_name = "uv_gettimeofday")
	gettimeofday :: proc(tv: ^uv_timeval64_t) -> i32 ---

	@(link_name = "uv_thread_create")
	thread_create :: proc(tid: ^uv_thread_t, entry: uv_thread_cb, arg: rawptr) -> i32 ---

	@(link_name = "uv_thread_create_ex")
	thread_create_ex :: proc(tid: ^uv_thread_t, params: [^]uv_thread_options_t, entry: uv_thread_cb, arg: rawptr) -> i32 ---

	@(link_name = "uv_thread_setaffinity")
	thread_setaffinity :: proc(tid: ^uv_thread_t, cpumask: cstring, oldmask: cstring, mask_size: u64) -> i32 ---

	@(link_name = "uv_thread_getaffinity")
	thread_getaffinity :: proc(tid: ^uv_thread_t, cpumask: cstring, mask_size: u64) -> i32 ---

	@(link_name = "uv_thread_getcpu")
	thread_getcpu :: proc() -> i32 ---

	@(link_name = "uv_thread_self")
	thread_self :: proc() -> uv_thread_t ---

	@(link_name = "uv_thread_join")
	thread_join :: proc(tid: ^uv_thread_t) -> i32 ---

	@(link_name = "uv_thread_equal")
	thread_equal :: proc(t1: ^uv_thread_t, t2: ^uv_thread_t) -> i32 ---

	@(link_name = "uv_loop_get_data")
	loop_get_data :: proc(param0: ^uv_loop_t) -> rawptr ---

	@(link_name = "uv_loop_set_data")
	loop_set_data :: proc(param0: ^uv_loop_t, data: rawptr) ---

	@(link_name = "uv_utf16_length_as_wtf8")
	utf16_length_as_wtf8 :: proc(utf16: ^u16, utf16_len: ssize_t) -> u64 ---

	@(link_name = "uv_utf16_to_wtf8")
	utf16_to_wtf8 :: proc(utf16: ^u16, utf16_len: ssize_t, wtf8_ptr: ^cstring, wtf8_len_ptr: ^u64) -> i32 ---

	@(link_name = "uv_wtf8_length_as_utf16")
	wtf8_length_as_utf16 :: proc(wtf8: cstring) -> ssize_t ---

	@(link_name = "uv_wtf8_to_utf16")
	wtf8_to_utf16 :: proc(wtf8: cstring, utf16: ^u16, utf16_len: u64) ---

}
